--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6422,7 +6422,9 @@ button.close {
 .carousel-caption {
   position: absolute;
   right: 15%;
-  bottom: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  bottom: initial;
   left: 15%;
   z-index: 10;
   padding-top: 20px;
@@ -6430,6 +6432,7 @@ button.close {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  font-size: large;
 }
 .carousel-caption .btn {
   text-shadow: none;
